5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1635_1055.log
== TEST (2019-04-09 22:17:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
ang = 60
print(sin(ang))
print(sin(radians(ang)))
vo = float(input("velcidade inicial")
a = float(input("angulo do vetor em graus"))
d = float(input("distacia em d"))
opcao = input("atindir (sim/ nao")
r = (((vo)**2)* sin(2*a))/g
if (opcao == ("nao")):
	print(abs(d))
elese : 
	print ()

-- ERROR:
File "XXXX", line 9
    a = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:19:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
ang = 60
print(sin(ang))
print(sin(radians(ang)))
vo = float(input("velcidade inicial:")
a = float(input("angulo do vetor em graus:"))
d = float(input("distacia em d:"))
opcao = input("atindir (sim/ nao")
r = (((vo)**2)* sin(2*a))/g
if (opcao == ("nao")):
	print(abs(d))
elese : 
	print ()

-- ERROR:
File "XXXX", line 9
    a = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:20:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
ang = 60
print(sin(ang))
print(sin(radians(ang)))
vo = float(input("velcidade inicial: ")
a = float(input("angulo do vetor em graus: "))
d = float(input("distancia em d: "))
opcao = input("atindir (sim/ nao")
r = (((vo)**2)* sin(2*a))/g
if (opcao == ("nao")):
	print(abs(d))
elese : 
	print ()

-- ERROR:
File "XXXX", line 9
    a = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:22:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

vo = float(input("velcidade inicial: ")
a = radians(float(input("angulo do vetor em graus: ")))
d = float(input("distancia em d: "))

r = (((vo)**2)* sin(2*a))/g
if (d>=r-0.1 and d<=r+0.1):
	print("sim")
else: 
	print ("nao")

-- EXECUTION TIME:
0.207205
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 7
    a = radians(float(input()))
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:22:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

vo = float(input("velcidade inicial: ")
a = radians(float(input("angulo do vetor em graus: ")))
d = float(input("distancia em d: "))

r = (((vo)**2)* sin(2*a))/g
if(d>=r-0.1 and d<=r+0.1):
	print("sim")
else: 
	print ("nao")
-- EXECUTION TIME:
0.131564
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 7
    a = radians(float(input()))
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:26:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

vo = float(input("velcidade inicial: ")
a = radians(float(input("angulo do vetor em graus: ")))
d = float(input("distancia em d: "))

r = ((vo**2) * sin(2*a))/g
if(d>=r-0.1 and d<=r+0.1):
	print("sim")
else: 
	print ("nao")
-- EXECUTION TIME:
0.137454
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 7
    a = radians(float(input()))
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:26:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

vo = float(input("velcidade inicial: ")
a = radians(float(input("angulo do vetor em graus: ")))
d = float(input("distancia em d: "))

r = ((vo**2) * sin(2*a))/9.8
if(d>=r-0.1 and d<=r+0.1):
	print("sim")
else: 
	print ("nao")
-- EXECUTION TIME:
0.13924
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 7
    a = radians(float(input()))
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:26:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

vo = float(input("velcidade inicial: ")
a = radians(float(input("angulo do vetor em graus: ")))
d = float(input("distancia em d: "))

r = ((vo**2) * sin(2*a))/9.8
if(d>=r-0.1 and d<=r+0.1):
	print("sim")
else: 
	print ("nao")
-- ERROR:
File "XXXX", line 7
    a = radians(float(input()))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:27:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

vo = float(input("velcidade inicial: ")
a =radians(float(input("angulo do vetor em graus: ")))
d = float(input("distancia em d: "))

r = ((vo**2) * sin(2*a))/9.8
if(d>=r-0.1 and d<=r+0.1):
	print("sim")
else: 
	print ("nao")
-- EXECUTION TIME:
0.195285
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 7
    a =radians(float(input()))
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:27:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

vo = float(input("velcidade inicial: ")
a =radians(float(input("angulo do vetor em graus: ")))
d = float(input("distancia em d: "))

r = ((vo**2) * sin(2*a))/9.8
if(d>=r-0.1 and d<=r+0.1):
	print("sim")
else: 
	print ("nao")
-- ERROR:
File "XXXX", line 7
    a =radians(float(input()))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:27:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

vo = float(input("velcidade inicial: "))
a =radians(float(input("angulo do vetor em graus: ")))
d = float(input("distancia em d: "))

r = ((vo**2) * sin(2*a))/9.8
if(d>=r-0.1 and d<=r+0.1):
	print("sim")
else: 
	print ("nao")
-- EXECUTION TIME:
0.155293
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:29:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

vo = float(input("velcidade inicial: "))
a =radians(float(input("angulo do vetor em graus: ")))
d = float(input("distancia em d: "))

r = ((vo**2) * sin(2*a))/9.8
if abs(d>=r-0.1 and d<=r+0.1):
	print("sim")
else: 
	print ("nao")
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:29:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*

vo = float(input("velcidade inicial: "))
a =radians(float(input("angulo do vetor em graus: ")))
d = float(input("distancia em d: "))

r = ((vo**2) * sin(2*a))/9.8
if abs(d>=r-0.1 and d<=r+0.1):
	print("sim")
else: 
	print ("nao")
-- EXECUTION TIME:
0.185616
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
